Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,69 +1,75 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Mermi.github.io by mermi</title>
+    <meta name="description" content="Mermi.github.io : #MozFest14 ">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Mermi.github.io</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">Mermi.github.io</h1>
-        <p class="header">#MozFest14 </p>
 
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/mermi">View on GitHub</a>
 
+          <h1 id="project_title">Mermi.github.io</h1>
+          <h2 id="project_tagline">#MozFest14 </h2>
 
-        <ul>
-          <li><a class="buttons github" href="https://github.com/mermi">GitHub Profile</a></li>
-        </ul>
+        </header>
+    </div>
 
-      </header>
-      <section>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="my-first-participation-on-mozilla-festival" class="anchor" href="#my-first-participation-on-mozilla-festival"><span class="octicon octicon-link"></span></a>My First Participation on Mozilla Festival</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>The Mozilla Festival happened in London, It was an awesome Festival, it gathered passionate technology makers and creators eager to share their skills and many of them coming from different countries.</p>
 
 <h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a name="mozilla-festival-2014" class="anchor" href="#mozilla-festival-2014"><span class="octicon octicon-link"></span></a>Mozilla Festival 2014</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>I was invited to this festival as a Festival facilitator with the other reps, firstly I want to thanks Mozilla and all the Reps for this opportunity.</p>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<p>I arrived on 23th October at 4:20pm exactly and it was too difficult to get to the Hotel. When I arrived to the Mozilla Office, I began with introducing my self and my contributions as a Rep. So the meeting was about the schedule of our participation to Mozilla Festival and we shared some gifts from our countries and some goodies. It was a funny first day with Reps.
+The First Day of Mozilla Festival was on 24th October. We met all the other volunteers of the Mozilla Festival and we planned for our sessions.
+First in this day I worked with Deb (is an amazing reps from India), we worked on <a href="http://mermi.github.io/MozFest/#/">Mozilla Reps' presentation slides for the science fair booth</a>. I am very glad to work with you, deb 
+<img src="http://1.bp.blogspot.com/-1fiOYDgXa9U/VEu6kLnVhUI/AAAAAAAACmg/palWVEA8KB8/s1600/IMG_20141024_200227205.jpg" alt="Wonderful Collaboration"></p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>And I presented the Popcorn Maker with Ankit (who is also another reps from India and Webmaker Mentor), it was really amazing all the people coming and asking us about the tools: how does it work? how how can I use it ? and for what I will need it and sometimes we talked about the Webmaker Project</p>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<p>On 25th October was the first Big day, I joined the keynote in the morning and after that I have joined the session of Mozilla Student Ambassador Recruitment it was a funny session.
+Also I had a talk with the Hive Community and they asked me if I want to make a local community in Tunisia and it was grateful opportunity for me so we shared our contact after a long talk and I am so motivated to make local hive community in Tunisia.
+In the afternoon I joined the Maker Party booth, all the stands are amazing there, they are many kids child teenager old people adult it was AMAZING and I helped on the popocorn Maker booths and I had talked again to people about PopCorn Maker and show them how to use it and what is the goal of Popcorn Maker </p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p><img src="https://pbs.twimg.com/media/B0zYSvZIUAA6B9H.jpg:large" alt="Maker Party Booth"></p>
 
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<p>After a long day we had a dance party with karaoke it was so funny we have a hindi dance and I have joined the indian guys on the stage </p>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p><img src="https://pbs.twimg.com/media/B01J7jgIIAEVoNJ.jpg:large" alt="Lungi Dance"></p>
+
+<p>The last day of Mozilla Festival was the most tiring and amazing day, I came too early to the Venue with other Reps to get our Flame and I spent all the day flashing the flame given to the attendees and explain more how to use it and how to Flash it for the people who asked for the engineering build.</p>
+
+<p><img src="https://farm4.staticflickr.com/3934/15448655490_4dd029c362_h.jpg" alt="Mega Booth"></p>
+
+<p>It was a very exhausting and crazy experience for me. I really had fun, know a lot of things and discovered a lot of things. Also I have met the craziest and most beautiful people in this world :D </p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+
+    
+
   </body>
 </html>
